--- a/Gooze/es.lproj/Localizable.strings
+++ b/Gooze/es.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "validation.invalidCardNumber"="Ingresa un número de tarjeta válido";
 
 // Protocols/DatesSocketError
+"error.socket.dates.paymentMethodRequired"="Es necesario agregar un método de pago";
 "error.socket.dates.requestAlreadySent"="Se ha enviado tu solicitud";
 "error.socket.dates.invalidSatus"="No se pudo aceptar. La solicitud ya fue aceptada o rechazada";
 "error.socket.dates.noAck"="No se pudo establecer la comunicación con el servidor";
