Added ConfirmDialog. Show confirm dialog that gives the option to "add a payment method" when "payment method required error" is received.

--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -216,6 +216,10 @@
 
 "vm.profile.rate.date.rate"="Rate";
 
+"vm.profile.addPaymentMethodRequest"="Add payment method?";
+"vm.profile.addPaymentMethodAnswerAdd"="Add";
+"vm.profile.addPaymentMethodAnswerLater"="Later";
+
 // Views/components/Menu/GZEMenu
 "menu.item.title.profile"="Profile";
 "menu.item.title.beGooze"="Be Gooze";
