--- a/Gooze/en.lproj/Localizable.strings
+++ b/Gooze/en.lproj/Localizable.strings
@@ -244,7 +244,7 @@
 "vm.pickerToolbar.doneButton.title"="Ok";
 
 // ViewModel/GZERegisterPayPalViewModel
-"vm.register.paypal.description"="Please enter a valid PayPal account, it will be used for the delivery of benefits generated in your dates";
+"vm.register.paypal.description"="Enter a PayPal account, it will be used for the delivery of benefits generated in your dates";
 "vm.register.paypal.emailPlaceholder"="Email";
 "vm.register.paypal.emailConfirmPlaceholder"="Confirm email";
 "vm.register.paypal.emailConfirmMismatch"="Email and Confirm email doesn't match";
